spegel/dev/talos/spegel/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spegel
  labels:
    app: spegel
spec:
  parentRefs:
    - name: cilium
      namespace: kube-system
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - spegel.localhost
  rules:
    - backendRefs:
        - name: spegel
          port: 9090
          group: ""
          kind: Service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
